# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    "abilityconnecthelper_fuzzer:AbilityConnectHelperFuzzTest",
    "abilitymanageradapter_fuzzer:AbilityManagerAdapterFuzzTest",
    "audioadapterinterface_fuzzer:AudioAdapterInterfaceFuzzTest",
    "audiodevicemanager_fuzzer:AudioDeviceManagerFuzzTest",
    "avcontrollercallbackproxy_fuzzer:AVControllerCallbackProxyFuzzTest",
    "avcontrolleritem_fuzzer:AVControllerItemFuzzTest",
    "avsessionadapter_fuzzer:AVSessionAdapterFuzzTest",
    "avsessioncallbackproxy_fuzzer:AVSessionCallbackProxyFuzzTest",
    "avsessionitem_fuzzer:AVSessionItemFuzzTest",
    "avsessionservice_fuzzer:AVSessionServiceFuzzTest",
    "avsessionserviceext_fuzzer:AVSessionServiceExtFuzzTest",
    "bkgraudiocontroller_fuzzer:BkGrAudioControllerFuzzTest",
    "collaborationmanager_fuzzer:CollaborationManagerFuzzTest",
    "focussessionstrategy_fuzzer:FocusSessionStrategyFuzzTest",
    "migrateavsession_fuzzer:MigrateAVSessionFuzzTest",
    "permissionchecker_fuzzer:PermissionCheckerFuzzTest",
    "sessionlistenerproxy_fuzzer:SessionListenerProxyFuzzTest",
    "softbussessionmanager_fuzzer:SoftbusSessionManagerFuzzTest",
    "avsessionserviceext_fuzzer:AVSessionServiceExtFuzzTest",
  ]
}