# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "av_session/av_session"
av_session_root = "../../../../../.."

##############################fuzztest##########################################
ohos_fuzztest("AVSessionPixelMapAdapterFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "../avsessionpixelmapadapter_fuzzer"
  include_dirs = [
    "${av_session_root}/utils/include/",
    "${av_session_root}/interfaces/inner_api/native/session/include/",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-fno-access-control",
  ]
  sources = [ "avsessionpixelmapadapter_fuzzer.cpp" ]
  deps = [
    "${av_session_root}/frameworks/common:avsession_common",
    "${av_session_root}/utils:avsession_utils",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "access_token:libtokensetproc_shared",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "ipc:ipc_core",
  ]
}
###############################################################################
