# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
module_output_path = "multimedia_av_session/sessionfuzzer"

##############################fuzztest##########################################
ohos_fuzztest("SessionListenerStubFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "../sessionlistenerstub_fuzzer"

  include_dirs = [
    "../",
    "../../../include",
    "../../../../../../utils",
    "../../../../../../services/session/ipc/base",
    "../../../../../../services/session/ipc/proxy",
    "../../../../../../services/session/ipc/stub",
    "../../../../../../services/session/adapter",
    "../../../../../../interfaces/inner_api/native/session/include",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "session_listenerstub_fuzzer.cpp" ]
  deps = [ "../../../../session:avsession_client" ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "audio_framework:audio_client",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "input:libmmi-client",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]
}
###############################################################################
