# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("../../../../../../config.gni")
module_output_path = "av_session/av_session"

##############################fuzztest##########################################
ohos_fuzztest("AbilityManagerAdapterFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "../abilitymanageradapter_fuzzer"
  include_dirs = [
    "../",
    "../../../remote",
    "../../../../adapter",
    "../../../../server",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "abilitymanageradapter_fuzzer.cpp" ]
  deps = [
    "./../../../../../../frameworks/native/session:avsession_client_static",
    "./../../../../../session:avsession_item_static",
    "./../../../../../session:avsession_service_static",
    "./../../../../../session:libidl_avsession_service_interface_proxy",
    "./../../../../../session:libidl_avsession_service_interface_stub",
    "./../../../../../../utils:avsession_utils",
  ]
  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "access_token:libtokensetproc_shared",
    "audio_framework:audio_client",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "input:libmmi-client",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  public_configs = ["./../../../../../session:avsession_ipc_config"]
  if (multimedia_av_session_enable_data_object) {
    external_deps += [ "data_object:distributeddataobject_impl" ]
  }

  if (multimedia_av_session_enable_device_manager) {
    external_deps += [ "device_manager:devicemanagersdk" ]
  }
}
###############################################################################
